# crm-bot

./: .env.example  .gitignore  README.md  docker-compose.yml
back/: go.mod  go.sum  package.json
back/cmd/server/: main.go
back/internal/config/: config.go
back/internal/db/: db.go
back/internal/dto/: employee.go  task.go  user.go
back/internal/middleware/: auth.go
back/internal/models/: employee.go  task.go  user.go
back/internal/repository/: employee.go  task.go  user.go
back/internal/service/: employee.go  task.go  user.go
back/internal/transport/http2/: router.go
back/internal/transport/http2/handlers/: employee.go  task.go  user.go
back/internal/utils/: file.go
back/src/: app.module.ts  main.ts
back/src/auth/: auth.guard.ts
bot/: pyproject.toml
bot/bot/: __main__.py  dispatcher.py
bot/bot/handlers/: __init__.py  callbacks.py  messages.py
bot/bot/handlers/add_employee/: __init__.py  callbacks.py  messages.py
bot/bot/handlers/list_employee/: __init__.py  callbacks.py
bot/bot/handlers/tasks/: __init__.py  callbacks.py  messages.py
bot/bot/keyboards/: __init__.py  inline.py
bot/bot/keyboards/list_employee/: inline.py
bot/bot/misc/: __init__.py  configuration.py  functions.py
bot/bot/service/: __init__.py  employee_service.py  users_service.py
bot/bot/states/: __init__.py  employee_state.py
buildfiles/: back.dockerfile  bot.dockerfile
